# directory_summarizer

./: .gitignore  Cargo.toml  README.md
docs/: index.html  sw.js
src/: app.rs  lib.rs  main.rs  summarize.rs
