[package]
name = "directory_summarizer"
default-run = "directory_summarizer_bin"
version = "1.0.0"
authors = ["Brooke <12855764+goingforbrooke@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "directory_summarizer_bin"
path = "src/main.rs"

[dependencies]
walkdir = "2.3.2"
rfd = "0.8.2"
itertools = "0.10.3"
